tests/snapshots/integration__integration_tests__help__help_step_short.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - step
    - "-h"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_BIN: ""
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt step - Workflow building blocks
Usage: [1m[36mwt step[0m [36m[OPTIONS][0m [36m<COMMAND>[0m

[1m[32mCommands:[0m
  [1m[36mcommit[0m       Commit changes with LLM commit message
  [1m[36msquash[0m       Squash commits with LLM commit message
  [1m[36mpush[0m         Push changes to local target branch
  [1m[36mrebase[0m       Rebase onto target
  [1m[36mpost-create[0m  Run post-create hook
  [1m[36mpost-start[0m   Run post-start hook
  [1m[36mpre-commit[0m   Run pre-commit hook
  [1m[36mpre-merge[0m    Run pre-merge hook
  [1m[36mpost-merge[0m   Run post-merge hook

[1m[32mOptions:[0m
  [1m[36m-h[0m, [1m[36m--help[0m  Print help

[1m[32mGlobal Options:[0m
  [1m[36m-C[0m[36m [0m[36m<path>[0m            Working directory for this command
      [1m[36m--config[0m[36m [0m[36m<path>[0m  User config file path
  [1m[36m-v[0m, [1m[36m--verbose[0m        Show commands and debug info
